# Goodnight.Laptop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  test.bat
.github/workflows/: cmake.yml
cli/: cli.cpp
gui/: gui.cpp  gui.html
include/goodnight/: goodnight.h  logger.h  placeholder-window.h
resources/: app.rc
src/: goodnight.cpp  placeholder-window.cpp
